--- a/css/styles.css
+++ b/css/styles.css
@@ -27,9 +27,15 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+ul,
+ol {
   margin: 0;
   padding: 0;
+}
+
+img {
+  display: block;
 }
 
 .title {
@@ -57,10 +63,6 @@ p {
 }
 
 /* шапка страницы *****************************************/
-.header {
-  padding-top: 24px;
-  padding-bottom: 25px;
-}
 
 .header .container {
   background-color: #ffffff;
@@ -165,12 +167,16 @@ p {
 }
 
 .nav-link {
+  display: block;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: #212121;
   text-decoration: none;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .contacts-list {
@@ -203,6 +209,22 @@ p {
   fill: var(--accent-color);
 }
 
+.current {
+  position: relative;
+}
+.current::after {
+  content: "";
+  display: block;
+  position: absolute;
+
+  width: 100%;
+  height: 4px;
+
+  background: var(--accent-color);
+  border-radius: 2px;
+
+  bottom: 0;
+}
 /* тело страницы ***************************************/
 /* банер **************************/
 .section-baner {
@@ -320,6 +342,26 @@ p {
   justify-content: space-between;
 }
 
+.works-item {
+  position: relative;
+}
+.works-description {
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
+
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #ffffff;
+  background: rgba(47, 48, 58, 0.8);
+
+  padding-top: 27px;
+  padding-bottom: 27px;
+}
 /* секция команда**************************************** */
 .section-team {
   background: #f5f4fa;
@@ -489,7 +531,7 @@ p {
 }
 
 /* POTFOLIO********************************************************************* */
-.header {
+.portfolio {
   border-bottom: 1px solid #ececec;
 }
 .filter-list {
