--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,7 @@ img {
 .icon-phone {
   margin-right: 10px;
 
+  transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -178,8 +179,16 @@ img {
   color: #212121;
   text-decoration: none;
 
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   padding-top: 32px;
   padding-bottom: 32px;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--accent-color);
 }
 
 .contacts-list {
@@ -194,15 +203,11 @@ img {
 .type-link {
   color: #757575;
   text-decoration: none;
-
+  transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent-color);
-}
 .contacts-list .contacts-link:hover,
 .contacts-list .contacts-link:focus {
   color: var(--accent-color);
@@ -244,7 +249,7 @@ img {
     url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
 
   padding: 200px 0px;
   margin-left: auto;
@@ -287,7 +292,7 @@ img {
   height: 100%;
 
   background: rgba(0, 0, 0, 0.2);
-
+  transition-property: opacity, visibility;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -455,6 +460,7 @@ img {
 }
 
 .sociale-link-transparent {
+  transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -470,6 +476,7 @@ img {
 }
 .icon-sociale-grey {
   fill: #afb1b8;
+  transition-property: fill;
 }
 /* секция постоянные клиенты***********************************/
 .section-clients {
@@ -503,6 +510,7 @@ img {
   border: 1px solid #afb1b8;
   border-radius: 4px;
 
+  transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -521,6 +529,7 @@ img {
   width: 106px;
   height: 60px;
   fill: #afb1b8;
+  transition-property: fill;
 }
 
 /* подвал страниц INDEX  и PORTFOLIO *******************************************/
@@ -552,6 +561,8 @@ img {
 .footer-mail,
 .footer-tel {
   text-decoration: none;
+
+  transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -589,6 +600,7 @@ img {
 }
 
 .sociale-link-dark {
+  transition-property: background;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -630,6 +642,8 @@ img {
 }
 .filter-button {
   padding: 6px 22px;
+
+  transition-property: background, color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -654,6 +668,7 @@ img {
   margin-top: 30px;
   margin-left: 30px;
 
+  transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -707,6 +722,7 @@ img {
   font-size: 18px;
   line-height: 1.56;
 
+  transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
