--- a/css/styles.css
+++ b/css/styles.css
@@ -331,6 +331,8 @@ img {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: transparent;
+
+  cursor: pointer;
 }
 /* секция преимущества **********************************/
 .visually-hidden {
